Fix: Acomode overflow en service card para movil en la linea 7

--- a/custom_element_templates/service-card.scss
+++ b/custom_element_templates/service-card.scss
@@ -48,6 +48,7 @@
             margin-left: calc($gutter /2);
           }
           h4 {
+            text-transform: uppercase;
             margin-bottom: 30px;
           }
           p {
